antlr/EscriptParser.java
// $ANTLR 3.4 Escript.g 2012-02-12 13:51:05

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class EscriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Attribute", "Be", "COMMENT", "Comparation", "DIGIT", "ESC", "Have", "If", "Integer", "LETTER", "LINE_COMMENT", "NL", "Preposition", "Quote", "Real", "Reductions", "The", "Verb", "WS", "Word", "':'", "'OK'", "'all set'", "'alrighty'", "'as long as'", "'bash'", "'define'", "'done'", "'end'", "'finished'", "'function'", "'funny'", "'hate'", "'how to'", "'if'", "'ing'", "'joyfully'", "'let'", "'like'", "'method for'", "'method'", "'never'", "'of'", "'often'", "'ok'", "'once'", "'qed'", "'s to'", "'s'", "'set'", "'stinky'", "'that'", "'then'", "'until'", "'val'", "'value of'", "'var'", "'want'", "'where'", "'while'", "'who'"
    };

    public static final int EOF=-1;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int Attribute=4;
    public static final int Be=5;
    public static final int COMMENT=6;
    public static final int Comparation=7;
    public static final int DIGIT=8;
    public static final int ESC=9;
    public static final int Have=10;
    public static final int If=11;
    public static final int Integer=12;
    public static final int LETTER=13;
    public static final int LINE_COMMENT=14;
    public static final int NL=15;
    public static final int Preposition=16;
    public static final int Quote=17;
    public static final int Real=18;
    public static final int Reductions=19;
    public static final int The=20;
    public static final int Verb=21;
    public static final int WS=22;
    public static final int Word=23;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public EscriptParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public EscriptParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return EscriptParser.tokenNames; }
    public String getGrammarFileName() { return "Escript.g"; }


            String file="~/data/base/lang/english.words.sqlite3.db";
            static Runtime runtime=Runtime.getRuntime();
            
            public boolean testSql(String word, String type){
                    try{
                    String query=" 'SELECT * FROM nouns WHERE word=\""+word+"\"'";
                    String cmd="sqlite3 "+file+query;
                    Process p =runtime.exec(cmd);
                    }catch(Exception e){};
                    return false;
                    }
                    
             public static void pp(Object x){
                    System.out.println(x);
             }                
     


    // $ANTLR start "ruby_action"
    // Escript.g:31:1: ruby_action : bash quote ;
    public final void ruby_action() throws RecognitionException {
        try {
            // Escript.g:31:12: ( bash quote )
            // Escript.g:32:2: bash quote
            {
            pushFollow(FOLLOW_bash_in_ruby_action44);
            bash();

            state._fsp--;


            pushFollow(FOLLOW_quote_in_ruby_action46);
            quote();

            state._fsp--;


            runtime.exec( $quote.getText());

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "ruby_action"



    // $ANTLR start "bash"
    // Escript.g:36:1: bash : 'bash' ;
    public final void bash() throws RecognitionException {
        try {
            // Escript.g:36:5: ( 'bash' )
            // Escript.g:36:7: 'bash'
            {
            match(input,29,FOLLOW_29_in_bash58); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "bash"



    // $ANTLR start "parse"
    // Escript.g:40:1: parse returns [String value] : (exp= statements |exp= action | EOF );
    public final String parse() throws RecognitionException {
        String value = null;


        try {
            // Escript.g:41:2: (exp= statements |exp= action | EOF )
            int alt1=3;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // Escript.g:41:4: exp= statements
                    {
                    pushFollow(FOLLOW_statements_in_parse75);
                    statements();

                    state._fsp--;


                    value = exp.getText();pp(value);

                    }
                    break;
                case 2 :
                    // Escript.g:42:4: exp= action
                    {
                    pushFollow(FOLLOW_action_in_parse84);
                    action();

                    state._fsp--;


                    value = exp.getText();pp(value);

                    }
                    break;
                case 3 :
                    // Escript.g:43:3: EOF
                    {
                    match(input,EOF,FOLLOW_EOF_in_parse89); 

                    pp("done");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "parse"



    // $ANTLR start "act0"
    // Escript.g:45:1: act0 : ( action | statements );
    public final void act0() throws RecognitionException {
        try {
            // Escript.g:45:6: ( action | statements )
            int alt2=2;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // Escript.g:45:8: action
                    {
                    pushFollow(FOLLOW_action_in_act099);
                    action();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // Escript.g:45:15: statements
                    {
                    pushFollow(FOLLOW_statements_in_act0101);
                    statements();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "act0"



    // $ANTLR start "statements"
    // Escript.g:47:1: statements : ( ( definition )* | block );
    public final void statements() throws RecognitionException {
        try {
            // Escript.g:48:3: ( ( definition )* | block )
            int alt4=2;
            switch ( input.LA(1) ) {
            case 30:
            case 34:
            case 37:
            case 43:
            case 44:
                {
                alt4=1;
                }
                break;
            case EOF:
                {
                alt4=1;
                }
                break;
            case The:
            case Verb:
            case Word:
            case 29:
            case 35:
            case 41:
            case 53:
            case 58:
            case 59:
            case 60:
                {
                alt4=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // Escript.g:48:3: ( definition )*
                    {
                    // Escript.g:48:3: ( definition )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==30||LA3_0==34||LA3_0==37||(LA3_0 >= 43 && LA3_0 <= 44)) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Escript.g:48:3: definition
                    	    {
                    	    pushFollow(FOLLOW_definition_in_statements110);
                    	    definition();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // Escript.g:48:15: block
                    {
                    pushFollow(FOLLOW_block_in_statements113);
                    block();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "statements"



    // $ANTLR start "block"
    // Escript.g:50:1: block : ( expression ( NL )+ )* ;
    public final void block() throws RecognitionException {
        try {
            // Escript.g:51:3: ( ( expression ( NL )+ )* )
            // Escript.g:51:5: ( expression ( NL )+ )*
            {
            // Escript.g:51:5: ( expression ( NL )+ )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0 >= The && LA6_0 <= Verb)||LA6_0==Word||LA6_0==29||LA6_0==35||LA6_0==41||LA6_0==53||(LA6_0 >= 58 && LA6_0 <= 60)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // Escript.g:51:6: expression ( NL )+
            	    {
            	    pushFollow(FOLLOW_expression_in_block124);
            	    expression();

            	    state._fsp--;


            	    // Escript.g:51:17: ( NL )+
            	    int cnt5=0;
            	    loop5:
            	    do {
            	        int alt5=2;
            	        int LA5_0 = input.LA(1);

            	        if ( (LA5_0==NL) ) {
            	            alt5=1;
            	        }


            	        switch (alt5) {
            	    	case 1 :
            	    	    // Escript.g:51:17: NL
            	    	    {
            	    	    match(input,NL,FOLLOW_NL_in_block126); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt5 >= 1 ) break loop5;
            	                EarlyExitException eee =
            	                    new EarlyExitException(5, input);
            	                throw eee;
            	        }
            	        cnt5++;
            	    } while (true);


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "block"



    // $ANTLR start "expression"
    // Escript.g:53:1: expression : action ;
    public final void expression() throws RecognitionException {
        try {
            // Escript.g:54:2: ( action )
            // Escript.g:54:4: action
            {
            pushFollow(FOLLOW_action_in_expression139);
            action();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "expression"



    // $ANTLR start "definition"
    // Escript.g:56:1: definition : method verb ( endNode )? ( arg )* ( ':' )? NL block done ;
    public final void definition() throws RecognitionException {
        try {
            // Escript.g:57:2: ( method verb ( endNode )? ( arg )* ( ':' )? NL block done )
            // Escript.g:57:3: method verb ( endNode )? ( arg )* ( ':' )? NL block done
            {
            pushFollow(FOLLOW_method_in_definition148);
            method();

            state._fsp--;


            pushFollow(FOLLOW_verb_in_definition150);
            verb();

            state._fsp--;


            // Escript.g:57:15: ( endNode )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==The||LA7_0==Word||LA7_0==35) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // Escript.g:57:15: endNode
                    {
                    pushFollow(FOLLOW_endNode_in_definition152);
                    endNode();

                    state._fsp--;


                    }
                    break;

            }


            // Escript.g:57:24: ( arg )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==Preposition) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // Escript.g:57:24: arg
            	    {
            	    pushFollow(FOLLOW_arg_in_definition155);
            	    arg();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            // Escript.g:57:29: ( ':' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==24) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // Escript.g:57:29: ':'
                    {
                    match(input,24,FOLLOW_24_in_definition158); 

                    }
                    break;

            }


            match(input,NL,FOLLOW_NL_in_definition161); 

            pushFollow(FOLLOW_block_in_definition163);
            block();

            state._fsp--;


            pushFollow(FOLLOW_done_in_definition165);
            done();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "definition"



    // $ANTLR start "if_then"
    // Escript.g:60:1: if_then : ( 'if' condition 'then' action | If condition ( 'then' )? NL block done );
    public final void if_then() throws RecognitionException {
        try {
            // Escript.g:61:2: ( 'if' condition 'then' action | If condition ( 'then' )? NL block done )
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==38) ) {
                alt11=1;
            }
            else if ( (LA11_0==If) ) {
                alt11=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 11, 0, input);

                throw nvae;

            }
            switch (alt11) {
                case 1 :
                    // Escript.g:61:4: 'if' condition 'then' action
                    {
                    match(input,38,FOLLOW_38_in_if_then179); 

                    pushFollow(FOLLOW_condition_in_if_then181);
                    condition();

                    state._fsp--;


                    match(input,56,FOLLOW_56_in_if_then183); 

                    pushFollow(FOLLOW_action_in_if_then185);
                    action();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // Escript.g:62:4: If condition ( 'then' )? NL block done
                    {
                    match(input,If,FOLLOW_If_in_if_then190); 

                    pushFollow(FOLLOW_condition_in_if_then192);
                    condition();

                    state._fsp--;


                    // Escript.g:62:17: ( 'then' )?
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==56) ) {
                        alt10=1;
                    }
                    switch (alt10) {
                        case 1 :
                            // Escript.g:62:17: 'then'
                            {
                            match(input,56,FOLLOW_56_in_if_then194); 

                            }
                            break;

                    }


                    match(input,NL,FOLLOW_NL_in_if_then197); 

                    pushFollow(FOLLOW_block_in_if_then199);
                    block();

                    state._fsp--;


                    pushFollow(FOLLOW_done_in_if_then201);
                    done();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "if_then"



    // $ANTLR start "once"
    // Escript.g:65:1: once : 'once' condition ( 'then' )? action ;
    public final void once() throws RecognitionException {
        try {
            // Escript.g:66:2: ( 'once' condition ( 'then' )? action )
            // Escript.g:66:4: 'once' condition ( 'then' )? action
            {
            match(input,49,FOLLOW_49_in_once211); 

            pushFollow(FOLLOW_condition_in_once213);
            condition();

            state._fsp--;


            // Escript.g:66:21: ( 'then' )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==56) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // Escript.g:66:21: 'then'
                    {
                    match(input,56,FOLLOW_56_in_once215); 

                    }
                    break;

            }


            pushFollow(FOLLOW_action_in_once218);
            action();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "once"



    // $ANTLR start "action"
    // Escript.g:76:1: action : ( ruby_action | set | verb | verb nod | endNode verb nod );
    public final void action() throws RecognitionException {
        try {
            // Escript.g:76:8: ( ruby_action | set | verb | verb nod | endNode verb nod )
            int alt13=5;
            switch ( input.LA(1) ) {
            case 29:
                {
                alt13=1;
                }
                break;
            case 41:
            case 53:
            case 58:
            case 59:
            case 60:
                {
                alt13=2;
                }
                break;
            case The:
                {
                switch ( input.LA(2) ) {
                case 58:
                case 59:
                case 60:
                    {
                    alt13=2;
                    }
                    break;
                case Word:
                    {
                    int LA13_9 = input.LA(3);

                    if ( (LA13_9==Be) ) {
                        alt13=2;
                    }
                    else if ( (LA13_9==Verb) ) {
                        alt13=5;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 13, 9, input);

                        throw nvae;

                    }
                    }
                    break;
                case 35:
                    {
                    alt13=5;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 13, 3, input);

                    throw nvae;

                }

                }
                break;
            case Word:
                {
                int LA13_5 = input.LA(2);

                if ( (LA13_5==Be) ) {
                    alt13=2;
                }
                else if ( (LA13_5==Verb) ) {
                    alt13=5;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 13, 5, input);

                    throw nvae;

                }
                }
                break;
            case Verb:
                {
                int LA13_6 = input.LA(2);

                if ( (LA13_6==EOF||LA13_6==NL||LA13_6==57) ) {
                    alt13=3;
                }
                else if ( (LA13_6==Integer||(LA13_6 >= Quote && LA13_6 <= Real)||LA13_6==The||LA13_6==Word) ) {
                    alt13=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 13, 6, input);

                    throw nvae;

                }
                }
                break;
            case 35:
                {
                alt13=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;

            }

            switch (alt13) {
                case 1 :
                    // Escript.g:77:2: ruby_action
                    {
                    pushFollow(FOLLOW_ruby_action_in_action239);
                    ruby_action();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // Escript.g:79:4: set
                    {
                    pushFollow(FOLLOW_set_in_action245);
                    set();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // Escript.g:80:3: verb
                    {
                    pushFollow(FOLLOW_verb_in_action249);
                    verb();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // Escript.g:81:3: verb nod
                    {
                    pushFollow(FOLLOW_verb_in_action253);
                    verb();

                    state._fsp--;


                    pushFollow(FOLLOW_nod_in_action255);
                    nod();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // Escript.g:82:3: endNode verb nod
                    {
                    pushFollow(FOLLOW_endNode_in_action259);
                    endNode();

                    state._fsp--;


                    pushFollow(FOLLOW_verb_in_action261);
                    verb();

                    state._fsp--;


                    pushFollow(FOLLOW_nod_in_action263);
                    nod();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "action"



    // $ANTLR start "loopendNode"
    // Escript.g:85:1: loopendNode : ( 'while' condition NL block done | action 'until' condition | 'as long as' condition NL block done );
    public final void loopendNode() throws RecognitionException {
        try {
            // Escript.g:85:12: ( 'while' condition NL block done | action 'until' condition | 'as long as' condition NL block done )
            int alt14=3;
            switch ( input.LA(1) ) {
            case 63:
                {
                alt14=1;
                }
                break;
            case The:
            case Verb:
            case Word:
            case 29:
            case 35:
            case 41:
            case 53:
            case 58:
            case 59:
            case 60:
                {
                alt14=2;
                }
                break;
            case 28:
                {
                alt14=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;

            }

            switch (alt14) {
                case 1 :
                    // Escript.g:86:3: 'while' condition NL block done
                    {
                    match(input,63,FOLLOW_63_in_loopendNode274); 

                    pushFollow(FOLLOW_condition_in_loopendNode276);
                    condition();

                    state._fsp--;


                    match(input,NL,FOLLOW_NL_in_loopendNode278); 

                    pushFollow(FOLLOW_block_in_loopendNode280);
                    block();

                    state._fsp--;


                    pushFollow(FOLLOW_done_in_loopendNode282);
                    done();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // Escript.g:87:4: action 'until' condition
                    {
                    pushFollow(FOLLOW_action_in_loopendNode288);
                    action();

                    state._fsp--;


                    match(input,57,FOLLOW_57_in_loopendNode290); 

                    pushFollow(FOLLOW_condition_in_loopendNode292);
                    condition();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // Escript.g:90:5: 'as long as' condition NL block done
                    {
                    match(input,28,FOLLOW_28_in_loopendNode301); 

                    pushFollow(FOLLOW_condition_in_loopendNode303);
                    condition();

                    state._fsp--;


                    match(input,NL,FOLLOW_NL_in_loopendNode305); 

                    pushFollow(FOLLOW_block_in_loopendNode307);
                    block();

                    state._fsp--;


                    pushFollow(FOLLOW_done_in_loopendNode309);
                    done();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "loopendNode"



    // $ANTLR start "set"
    // Escript.g:94:1: set : ( let )? ( the )? ( 'var' | 'val' | 'value of' )? variable be value ;
    public final void set() throws RecognitionException {
        try {
            // Escript.g:95:2: ( ( let )? ( the )? ( 'var' | 'val' | 'value of' )? variable be value )
            // Escript.g:95:3: ( let )? ( the )? ( 'var' | 'val' | 'value of' )? variable be value
            {
            // Escript.g:95:3: ( let )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==41||LA15_0==53) ) {
                alt15=1;
            }
            switch (alt15) {
                case 1 :
                    // Escript.g:95:3: let
                    {
                    pushFollow(FOLLOW_let_in_set323);
                    let();

                    state._fsp--;


                    }
                    break;

            }


            // Escript.g:95:8: ( the )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==The) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // Escript.g:95:8: the
                    {
                    pushFollow(FOLLOW_the_in_set326);
                    the();

                    state._fsp--;


                    }
                    break;

            }


            // Escript.g:95:14: ( 'var' | 'val' | 'value of' )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( ((LA17_0 >= 58 && LA17_0 <= 60)) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // Escript.g:
                    {
                    if ( (input.LA(1) >= 58 && input.LA(1) <= 60) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;

            }


            pushFollow(FOLLOW_variable_in_set339);
            variable();

            state._fsp--;


            pushFollow(FOLLOW_be_in_set341);
            be();

            state._fsp--;


            pushFollow(FOLLOW_value_in_set343);
            value();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "set"



    // $ANTLR start "variable"
    // Escript.g:98:1: variable : Word ;
    public final void variable() throws RecognitionException {
        try {
            // Escript.g:99:2: ( Word )
            // Escript.g:99:4: Word
            {
            match(input,Word,FOLLOW_Word_in_variable354); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "variable"


